<resources>
    <string name="app_name">Schedule_App</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tues">Tues</string>
    <string name="Wed">Wed</string>
    <string name="Thurs">Thurs</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Month">Month</string>
    <string name="prevMonth">&lt;\-</string>
    <string name="nextMonth">\-&gt;</string>
    <string name="blankDate">&#32;</string>
    <string name="size">45dp</string>
    <string name="assignName">Assignment Name</string>
    <string name="itemName">Item Name</string>
</resources>

